Name:                xbattbar
Version:             0.0
Synopsis:            Battery indicator for X11
License:             MIT
License-file:        LICENSE
Author:              Alexander Polakov
Maintainer:          plhk@sdf.org
Build-Type:          Simple
Cabal-Version:       >=1.4
Description:         Battery indicator for X11

Executable xbattbar
  Main-is:           main.hs
  GHC-Options:       -with-rtsopts=-V0
  Build-Depends:     base >= 3 && < 5, select, X11
