name:                xbattbar
version:             0.1
synopsis:            Simple battery indicator
-- description:
homepage:            https://github.com/polachok/xbattbar
license:             MIT
license-file:        LICENSE
author:              Alexander Polakov
maintainer:          plhk@sdf.org
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.4

executable xbattbar
  main-is:           Main.hs
  other-modules:     XBattBar.Types, XBattBar.Core, XBattBar.Backend, XBattBar.Widgets
  GHC-Options:       -with-rtsopts=-V0
  build-depends:     base, X11, select, old-time
  hs-source-dirs:    src
